<resources>
    <string name="app_name">ColorMyView</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How To Play</string>
    <string name="play_desc">Click On The Text To Change Color</string>
</resources>